--- a/Hackerrank_P1.ipynb
+++ b/Hackerrank_P1.ipynb
@@ -64,9 +64,9 @@
     "if n%2 !=0:\n",
     "    print('Weird') \n",
     "else:\n",
-    "    if n >=2 & n<=5:\n",
+    "    if n >=2 and n<=5:\n",
     "        print('Not Weird')       \n",
-    "    elif n>= 6 & n<=20:\n",
+    "    elif n>= 6 and n<=20:\n",
     "        print('Weird')   \n",
     "    elif n>20:\n",
     "        print('Not Weird')    "
